PROYECTO FINAL/microC.output
Gramática

    0 $accept: program $end

    1 $@1: ε

    2 $@2: ε

    3 program: $@1 "void" "identifier" $@2 "(" ")" "{" body "}"

    4 body: body declaration
    5     | body statement
    6     | ε

    7 $@3: ε

    8 declaration: "var" $@3 tipo id_list ";"

    9 $@4: ε

   10 declaration: "const" $@4 tipo id_list ";"

   11 tipo: "int"

   12 id_list: id_decl
   13        | id_list "," id_decl

   14 id_decl: "identifier"
   15        | "identifier" "=" expression

   16 statement: "identifier" "=" expression ";"
   17          | "{" statement_list "}"
   18          | "if" "(" expression ")" statement "else" statement
   19          | "if" "(" expression ")" statement
   20          | "while" "(" expression ")" statement
   21          | "print" "(" print_list ")" ";"
   22          | "read" "(" read_list ")" ";"
   23          | "do" statement "while" "(" expression ")" ";"

   24 statement_list: statement_list statement
   25               | ε

   26 print_list: print_item
   27           | print_list "," print_item

   28 print_item: expression
   29           | "cadena"

   30 read_list: "identifier"
   31          | read_list "," "identifier"

   32 expression: expression "+" expression
   33           | expression "-" expression
   34           | expression "*" expression
   35           | expression "/" expression
   36           | "number"
   37           | "identifier"
   38           | "(" expression ")"
   39           | "-" expression
   40           | expression "<" expression
   41           | expression ">" expression
   42           | expression "<=" expression
   43           | expression ">=" expression
   44           | expression "==" expression
   45           | expression "!=" expression
   46           | "(" error ")"


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 46
    ";" (258) 8 10 16 21 22 23
    "identifier" <str> (259) 3 14 15 16 30 31 37
    "=" (260) 15 16
    "+" (261) 32
    "-" (262) 33 39
    "{" (263) 3 17
    "}" (264) 3 17
    "(" (265) 3 18 19 20 21 22 23 38 46
    ")" (266) 3 18 19 20 21 22 23 38 46
    "print" (267) 21
    "," (268) 13 27 31
    "cadena" <str> (269) 29
    "*" (270) 34
    "void" (271) 3
    "var" (272) 8
    "const" (273) 10
    "int" (274) 11
    "if" (275) 18 19
    "else" (276) 18
    "do" (277) 23
    "while" (278) 20 23
    "read" (279) 22
    "/" (280) 35
    "<" (281) 40
    ">" (282) 41
    "<=" (283) 42
    ">=" (284) 43
    "==" (285) 44
    "!=" (286) 45
    "number" <str> (287) 36
    SIGNO (288)
    NOELSE (289)


No terminales con las reglas donde aparecen

    $accept (35)
        on left: 0
    program (36)
        on left: 3
        on right: 0
    $@1 (37)
        on left: 1
        on right: 3
    $@2 (38)
        on left: 2
        on right: 3
    body (39)
        on left: 4 5 6
        on right: 3 4 5
    declaration (40)
        on left: 8 10
        on right: 4
    $@3 (41)
        on left: 7
        on right: 8
    $@4 (42)
        on left: 9
        on right: 10
    tipo <str> (43)
        on left: 11
        on right: 8 10
    id_list (44)
        on left: 12 13
        on right: 8 10 13
    id_decl (45)
        on left: 14 15
        on right: 12 13
    statement (46)
        on left: 16 17 18 19 20 21 22 23
        on right: 5 18 19 20 23 24
    statement_list (47)
        on left: 24 25
        on right: 17 24
    print_list (48)
        on left: 26 27
        on right: 21 27
    print_item (49)
        on left: 28 29
        on right: 26 27
    read_list (50)
        on left: 30 31
        on right: 22 31
    expression <codigo> (51)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 15 16 18 19 20 23 28 32 33 34 35 38 39 40 41 42 43 44 45


Estado 0

    0 $accept: • program $end

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program • $end

    $end  desplazar e ir al estado 3


Estado 2

    3 program: $@1 • "void" "identifier" $@2 "(" ")" "{" body "}"

    "void"  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end •

    $default  aceptar


Estado 4

    3 program: $@1 "void" • "identifier" $@2 "(" ")" "{" body "}"

    "identifier"  desplazar e ir al estado 5


Estado 5

    3 program: $@1 "void" "identifier" • $@2 "(" ")" "{" body "}"

    $default  reduce usando la regla 2 ($@2)

    $@2  ir al estado 6


Estado 6

    3 program: $@1 "void" "identifier" $@2 • "(" ")" "{" body "}"

    "("  desplazar e ir al estado 7


Estado 7

    3 program: $@1 "void" "identifier" $@2 "(" • ")" "{" body "}"

    ")"  desplazar e ir al estado 8


Estado 8

    3 program: $@1 "void" "identifier" $@2 "(" ")" • "{" body "}"

    "{"  desplazar e ir al estado 9


Estado 9

    3 program: $@1 "void" "identifier" $@2 "(" ")" "{" • body "}"

    $default  reduce usando la regla 6 (body)

    body  ir al estado 10


Estado 10

    3 program: $@1 "void" "identifier" $@2 "(" ")" "{" body • "}"
    4 body: body • declaration
    5     | body • statement

    "identifier"  desplazar e ir al estado 11
    "{"           desplazar e ir al estado 12
    "}"           desplazar e ir al estado 13
    "print"       desplazar e ir al estado 14
    "var"         desplazar e ir al estado 15
    "const"       desplazar e ir al estado 16
    "if"          desplazar e ir al estado 17
    "do"          desplazar e ir al estado 18
    "while"       desplazar e ir al estado 19
    "read"        desplazar e ir al estado 20

    declaration  ir al estado 21
    statement    ir al estado 22


Estado 11

   16 statement: "identifier" • "=" expression ";"

    "="  desplazar e ir al estado 23


Estado 12

   17 statement: "{" • statement_list "}"

    $default  reduce usando la regla 25 (statement_list)

    statement_list  ir al estado 24


Estado 13

    3 program: $@1 "void" "identifier" $@2 "(" ")" "{" body "}" •

    $default  reduce usando la regla 3 (program)


Estado 14

   21 statement: "print" • "(" print_list ")" ";"

    "("  desplazar e ir al estado 25


Estado 15

    8 declaration: "var" • $@3 tipo id_list ";"

    $default  reduce usando la regla 7 ($@3)

    $@3  ir al estado 26


Estado 16

   10 declaration: "const" • $@4 tipo id_list ";"

    $default  reduce usando la regla 9 ($@4)

    $@4  ir al estado 27


Estado 17

   18 statement: "if" • "(" expression ")" statement "else" statement
   19          | "if" • "(" expression ")" statement

    "("  desplazar e ir al estado 28


Estado 18

   23 statement: "do" • statement "while" "(" expression ")" ";"

    "identifier"  desplazar e ir al estado 11
    "{"           desplazar e ir al estado 12
    "print"       desplazar e ir al estado 14
    "if"          desplazar e ir al estado 17
    "do"          desplazar e ir al estado 18
    "while"       desplazar e ir al estado 19
    "read"        desplazar e ir al estado 20

    statement  ir al estado 29


Estado 19

   20 statement: "while" • "(" expression ")" statement

    "("  desplazar e ir al estado 30


Estado 20

   22 statement: "read" • "(" read_list ")" ";"

    "("  desplazar e ir al estado 31


Estado 21

    4 body: body declaration •

    $default  reduce usando la regla 4 (body)


Estado 22

    5 body: body statement •

    $default  reduce usando la regla 5 (body)


Estado 23

   16 statement: "identifier" "=" • expression ";"

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 36


Estado 24

   17 statement: "{" statement_list • "}"
   24 statement_list: statement_list • statement

    "identifier"  desplazar e ir al estado 11
    "{"           desplazar e ir al estado 12
    "}"           desplazar e ir al estado 37
    "print"       desplazar e ir al estado 14
    "if"          desplazar e ir al estado 17
    "do"          desplazar e ir al estado 18
    "while"       desplazar e ir al estado 19
    "read"        desplazar e ir al estado 20

    statement  ir al estado 38


Estado 25

   21 statement: "print" "(" • print_list ")" ";"

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "cadena"      desplazar e ir al estado 39
    "number"      desplazar e ir al estado 35

    print_list  ir al estado 40
    print_item  ir al estado 41
    expression  ir al estado 42


Estado 26

    8 declaration: "var" $@3 • tipo id_list ";"

    "int"  desplazar e ir al estado 43

    tipo  ir al estado 44


Estado 27

   10 declaration: "const" $@4 • tipo id_list ";"

    "int"  desplazar e ir al estado 43

    tipo  ir al estado 45


Estado 28

   18 statement: "if" "(" • expression ")" statement "else" statement
   19          | "if" "(" • expression ")" statement

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 46


Estado 29

   23 statement: "do" statement • "while" "(" expression ")" ";"

    "while"  desplazar e ir al estado 47


Estado 30

   20 statement: "while" "(" • expression ")" statement

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 48


Estado 31

   22 statement: "read" "(" • read_list ")" ";"

    "identifier"  desplazar e ir al estado 49

    read_list  ir al estado 50


Estado 32

   37 expression: "identifier" •

    $default  reduce usando la regla 37 (expression)


Estado 33

   39 expression: "-" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 51


Estado 34

   38 expression: "(" • expression ")"
   46           | "(" • error ")"

    error         desplazar e ir al estado 52
    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 53


Estado 35

   36 expression: "number" •

    $default  reduce usando la regla 36 (expression)


Estado 36

   16 statement: "identifier" "=" expression • ";"
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    ";"   desplazar e ir al estado 54
    "+"   desplazar e ir al estado 55
    "-"   desplazar e ir al estado 56
    "*"   desplazar e ir al estado 57
    "/"   desplazar e ir al estado 58
    "<"   desplazar e ir al estado 59
    ">"   desplazar e ir al estado 60
    "<="  desplazar e ir al estado 61
    ">="  desplazar e ir al estado 62
    "=="  desplazar e ir al estado 63
    "!="  desplazar e ir al estado 64


Estado 37

   17 statement: "{" statement_list "}" •

    $default  reduce usando la regla 17 (statement)


Estado 38

   24 statement_list: statement_list statement •

    $default  reduce usando la regla 24 (statement_list)


Estado 39

   29 print_item: "cadena" •

    $default  reduce usando la regla 29 (print_item)


Estado 40

   21 statement: "print" "(" print_list • ")" ";"
   27 print_list: print_list • "," print_item

    ")"  desplazar e ir al estado 65
    ","  desplazar e ir al estado 66


Estado 41

   26 print_list: print_item •

    $default  reduce usando la regla 26 (print_list)


Estado 42

   28 print_item: expression •
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "+"   desplazar e ir al estado 55
    "-"   desplazar e ir al estado 56
    "*"   desplazar e ir al estado 57
    "/"   desplazar e ir al estado 58
    "<"   desplazar e ir al estado 59
    ">"   desplazar e ir al estado 60
    "<="  desplazar e ir al estado 61
    ">="  desplazar e ir al estado 62
    "=="  desplazar e ir al estado 63
    "!="  desplazar e ir al estado 64

    $default  reduce usando la regla 28 (print_item)


Estado 43

   11 tipo: "int" •

    $default  reduce usando la regla 11 (tipo)


Estado 44

    8 declaration: "var" $@3 tipo • id_list ";"

    "identifier"  desplazar e ir al estado 67

    id_list  ir al estado 68
    id_decl  ir al estado 69


Estado 45

   10 declaration: "const" $@4 tipo • id_list ";"

    "identifier"  desplazar e ir al estado 67

    id_list  ir al estado 70
    id_decl  ir al estado 69


Estado 46

   18 statement: "if" "(" expression • ")" statement "else" statement
   19          | "if" "(" expression • ")" statement
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "+"   desplazar e ir al estado 55
    "-"   desplazar e ir al estado 56
    ")"   desplazar e ir al estado 71
    "*"   desplazar e ir al estado 57
    "/"   desplazar e ir al estado 58
    "<"   desplazar e ir al estado 59
    ">"   desplazar e ir al estado 60
    "<="  desplazar e ir al estado 61
    ">="  desplazar e ir al estado 62
    "=="  desplazar e ir al estado 63
    "!="  desplazar e ir al estado 64


Estado 47

   23 statement: "do" statement "while" • "(" expression ")" ";"

    "("  desplazar e ir al estado 72


Estado 48

   20 statement: "while" "(" expression • ")" statement
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "+"   desplazar e ir al estado 55
    "-"   desplazar e ir al estado 56
    ")"   desplazar e ir al estado 73
    "*"   desplazar e ir al estado 57
    "/"   desplazar e ir al estado 58
    "<"   desplazar e ir al estado 59
    ">"   desplazar e ir al estado 60
    "<="  desplazar e ir al estado 61
    ">="  desplazar e ir al estado 62
    "=="  desplazar e ir al estado 63
    "!="  desplazar e ir al estado 64


Estado 49

   30 read_list: "identifier" •

    $default  reduce usando la regla 30 (read_list)


Estado 50

   22 statement: "read" "(" read_list • ")" ";"
   31 read_list: read_list • "," "identifier"

    ")"  desplazar e ir al estado 74
    ","  desplazar e ir al estado 75


Estado 51

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   39           | "-" expression •
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    $default  reduce usando la regla 39 (expression)


Estado 52

   46 expression: "(" error • ")"

    ")"  desplazar e ir al estado 76


Estado 53

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   38           | "(" expression • ")"
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "+"   desplazar e ir al estado 55
    "-"   desplazar e ir al estado 56
    ")"   desplazar e ir al estado 77
    "*"   desplazar e ir al estado 57
    "/"   desplazar e ir al estado 58
    "<"   desplazar e ir al estado 59
    ">"   desplazar e ir al estado 60
    "<="  desplazar e ir al estado 61
    ">="  desplazar e ir al estado 62
    "=="  desplazar e ir al estado 63
    "!="  desplazar e ir al estado 64


Estado 54

   16 statement: "identifier" "=" expression ";" •

    $default  reduce usando la regla 16 (statement)


Estado 55

   32 expression: expression "+" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 78


Estado 56

   33 expression: expression "-" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 79


Estado 57

   34 expression: expression "*" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 80


Estado 58

   35 expression: expression "/" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 81


Estado 59

   40 expression: expression "<" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 82


Estado 60

   41 expression: expression ">" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 83


Estado 61

   42 expression: expression "<=" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 84


Estado 62

   43 expression: expression ">=" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 85


Estado 63

   44 expression: expression "==" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 86


Estado 64

   45 expression: expression "!=" • expression

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 87


Estado 65

   21 statement: "print" "(" print_list ")" • ";"

    ";"  desplazar e ir al estado 88


Estado 66

   27 print_list: print_list "," • print_item

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "cadena"      desplazar e ir al estado 39
    "number"      desplazar e ir al estado 35

    print_item  ir al estado 89
    expression  ir al estado 42


Estado 67

   14 id_decl: "identifier" •
   15        | "identifier" • "=" expression

    "="  desplazar e ir al estado 90

    $default  reduce usando la regla 14 (id_decl)


Estado 68

    8 declaration: "var" $@3 tipo id_list • ";"
   13 id_list: id_list • "," id_decl

    ";"  desplazar e ir al estado 91
    ","  desplazar e ir al estado 92


Estado 69

   12 id_list: id_decl •

    $default  reduce usando la regla 12 (id_list)


Estado 70

   10 declaration: "const" $@4 tipo id_list • ";"
   13 id_list: id_list • "," id_decl

    ";"  desplazar e ir al estado 93
    ","  desplazar e ir al estado 92


Estado 71

   18 statement: "if" "(" expression ")" • statement "else" statement
   19          | "if" "(" expression ")" • statement

    "identifier"  desplazar e ir al estado 11
    "{"           desplazar e ir al estado 12
    "print"       desplazar e ir al estado 14
    "if"          desplazar e ir al estado 17
    "do"          desplazar e ir al estado 18
    "while"       desplazar e ir al estado 19
    "read"        desplazar e ir al estado 20

    statement  ir al estado 94


Estado 72

   23 statement: "do" statement "while" "(" • expression ")" ";"

    "identifier"  desplazar e ir al estado 32
    "-"           desplazar e ir al estado 33
    "("           desplazar e ir al estado 34
    "number"      desplazar e ir al estado 35

    expression  ir al estado 95


Estado 73

   20 statement: "while" "(" expression ")" • statement

    "identifier"  desplazar e ir al estado 11
    "{"           desplazar e ir al estado 12
    "print"       desplazar e ir al estado 14
    "if"          desplazar e ir al estado 17
    "do"          desplazar e ir al estado 18
    "while"       desplazar e ir al estado 19
    "read"        desplazar e ir al estado 20

    statement  ir al estado 96


Estado 74

   22 statement: "read" "(" read_list ")" • ";"

    ";"  desplazar e ir al estado 97


Estado 75

   31 read_list: read_list "," • "identifier"

    "identifier"  desplazar e ir al estado 98


Estado 76

   46 expression: "(" error ")" •

    $default  reduce usando la regla 46 (expression)


Estado 77

   38 expression: "(" expression ")" •

    $default  reduce usando la regla 38 (expression)


Estado 78

   32 expression: expression • "+" expression
   32           | expression "+" expression •
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "*"  desplazar e ir al estado 57
    "/"  desplazar e ir al estado 58

    $default  reduce usando la regla 32 (expression)


Estado 79

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   33           | expression "-" expression •
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "*"  desplazar e ir al estado 57
    "/"  desplazar e ir al estado 58

    $default  reduce usando la regla 33 (expression)


Estado 80

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   34           | expression "*" expression •
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    $default  reduce usando la regla 34 (expression)


Estado 81

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   35           | expression "/" expression •
   40           | expression • "<" expression
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    $default  reduce usando la regla 35 (expression)


Estado 82

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   40           | expression "<" expression •
   41           | expression • ">" expression
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "+"  desplazar e ir al estado 55
    "-"  desplazar e ir al estado 56
    "*"  desplazar e ir al estado 57
    "/"  desplazar e ir al estado 58

    "<"   error (no asociativo)
    ">"   error (no asociativo)
    "<="  error (no asociativo)
    ">="  error (no asociativo)
    "=="  error (no asociativo)
    "!="  error (no asociativo)

    $default  reduce usando la regla 40 (expression)


Estado 83

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   40           | expression • "<" expression
   41           | expression • ">" expression
   41           | expression ">" expression •
   42           | expression • "<=" expression
   43           | expression • ">=" expression
   44           | expression • "==" expression
   45           | expression • "!=" expression

    "+"  desplazar e ir al estado 55
    "-"  desplazar e ir al estado 56
    "*"  desplazar e ir al estado 57
    "/"  desplazar e ir al estado 58
